src/llvm/lto.nim

## ===-- llvm-c/lto.h - LTO Public C Interface ---------------------*- C -*-===*\
## |*                                                                            *|
## |* Part of the LLVM Project, under the Apache License v2.0 with LLVM          *|
## |* Exceptions.                                                                *|
## |* See https://llvm.org/LICENSE.txt for license information.                  *|
## |* SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception                    *|
## |*                                                                            *|
## |*===----------------------------------------------------------------------===*|
## |*                                                                            *|
## |* This header provides public interface to an abstract link time optimization*|
## |* library.  LLVM provides an implementation of this interface for use with   *|
## |* llvm bitcode files.                                                        *|
## |*                                                                            *|
## \*===----------------------------------------------------------------------===

type
  LtoBoolT* = bool

## *
##  @defgroup LLVMCLTO LTO
##  @ingroup LLVMC
##
##  @{
##
## *
##  \since prior to LTO_API_VERSION=3
##

type
  LtoSymbolAttributes* {.size: sizeof(cint).} = enum
    LTO_SYMBOL_ALIGNMENT_MASK = 0x0000001F, ##  log2 of alignment
    LTO_SYMBOL_PERMISSIONS_RODATA = 0x00000080,
    LTO_SYMBOL_PERMISSIONS_CODE = 0x000000A0,
    LTO_SYMBOL_PERMISSIONS_DATA = 0x000000C0,
    LTO_SYMBOL_PERMISSIONS_MASK = 0x000000E0,
    LTO_SYMBOL_DEFINITION_REGULAR = 0x00000100,
    LTO_SYMBOL_DEFINITION_TENTATIVE = 0x00000200,
    LTO_SYMBOL_DEFINITION_WEAK = 0x00000300,
    LTO_SYMBOL_DEFINITION_UNDEFINED = 0x00000400,
    LTO_SYMBOL_DEFINITION_WEAKUNDEF = 0x00000500,
    LTO_SYMBOL_DEFINITION_MASK = 0x00000700,
    LTO_SYMBOL_SCOPE_INTERNAL = 0x00000800, LTO_SYMBOL_SCOPE_HIDDEN = 0x00001000,
    LTO_SYMBOL_SCOPE_DEFAULT = 0x00001800, LTO_SYMBOL_SCOPE_PROTECTED = 0x00002000,
    LTO_SYMBOL_SCOPE_DEFAULT_CAN_BE_HIDDEN = 0x00002800,
    LTO_SYMBOL_SCOPE_MASK = 0x00003800, LTO_SYMBOL_COMDAT = 0x00004000,
    LTO_SYMBOL_ALIAS = 0x00008000


## *
##  \since prior to LTO_API_VERSION=3
##

type
  LtoDebugModel* {.size: sizeof(cint).} = enum
    LTO_DEBUG_MODEL_NONE = 0, LTO_DEBUG_MODEL_DWARF = 1


## *
##  \since prior to LTO_API_VERSION=3
##

type
  LtoCodegenModel* {.size: sizeof(cint).} = enum
    LTO_CODEGEN_PIC_MODEL_STATIC = 0, LTO_CODEGEN_PIC_MODEL_DYNAMIC = 1,
    LTO_CODEGEN_PIC_MODEL_DYNAMIC_NO_PIC = 2, LTO_CODEGEN_PIC_MODEL_DEFAULT = 3


## * opaque reference to a loaded object module

type
  LtoModuleT* = ptr opaqueLTOModule

## * opaque reference to a code generator

type
  LtoCodeGenT* = ptr opaqueLTOCodeGenerator

## * opaque reference to a thin code generator

type
  ThinltoCodeGenT* = ptr opaqueThinLTOCodeGenerator

## *
##  Returns a printable string.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoGetVersion*(): cstring {.cdecl, importc: "lto_get_version", dynlib: LLVMlib.}
## *
##  Returns the last error string or NULL if last operation was successful.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoGetErrorMessage*(): cstring {.cdecl, importc: "lto_get_error_message", dynlib: LLVMlib.}
## *
##  Checks if a file is a loadable object file.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleIsObjectFile*(path: cstring): LtoBoolT {.cdecl, importc: "lto_module_is_object_file", dynlib: LLVMlib.}
## *
##  Checks if a file is a loadable object compiled for requested target.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleIsObjectFileForTarget*(path: cstring; targetTriplePrefix: cstring): LtoBoolT {. cdecl, importc: "lto_module_is_object_file_for_target", dynlib: LLVMlib.}
## *
##  Return true if \p Buffer contains a bitcode file with ObjC code (category
##  or class) in it.
##
##  \since LTO_API_VERSION=20
##

proc ltoModuleHasObjcCategory*(mem: pointer; length: csize): LtoBoolT {.cdecl, importc: "lto_module_has_objc_category", dynlib: LLVMlib.}
## *
##  Checks if a buffer is a loadable object file.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleIsObjectFileInMemory*(mem: pointer; length: csize): LtoBoolT {.cdecl, importc: "lto_module_is_object_file_in_memory", dynlib: LLVMlib.}
## *
##  Checks if a buffer is a loadable object compiled for requested target.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleIsObjectFileInMemoryForTarget*(mem: pointer; length: csize;targetTriplePrefix: cstring): LtoBoolT {.cdecl, importc: "lto_module_is_object_file_in_memory_for_target", dynlib: LLVMlib.}
## *
##  Loads an object file from disk.
##  Returns NULL on error (check lto_get_error_message() for details).
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleCreate*(path: cstring): LtoModuleT {.cdecl, importc: "lto_module_create", dynlib: LLVMlib.}
## *
##  Loads an object file from memory.
##  Returns NULL on error (check lto_get_error_message() for details).
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleCreateFromMemory*(mem: pointer; length: csize): LtoModuleT {.cdecl, importc: "lto_module_create_from_memory", dynlib: LLVMlib.}
## *
##  Loads an object file from memory with an extra path argument.
##  Returns NULL on error (check lto_get_error_message() for details).
##
##  \since LTO_API_VERSION=9
##

proc ltoModuleCreateFromMemoryWithPath*(mem: pointer; length: csize; path: cstring): LtoModuleT {. cdecl, importc: "lto_module_create_from_memory_with_path", dynlib: LLVMlib.}
## *
##  Loads an object file in its own context.
##
##  Loads an object file in its own LLVMContext.  This function call is
##  thread-safe.  However, modules created this way should not be merged into an
##  lto_code_gen_t using \a lto_codegen_add_module().
##
##  Returns NULL on error (check lto_get_error_message() for details).
##
##  \since LTO_API_VERSION=11
##

proc ltoModuleCreateInLocalContext*(mem: pointer; length: csize; path: cstring): LtoModuleT {. cdecl, importc: "lto_module_create_in_local_context", dynlib: LLVMlib.}
## *
##  Loads an object file in the codegen context.
##
##  Loads an object file into the same context as \c cg.  The module is safe to
##  add using \a lto_codegen_add_module().
##
##  Returns NULL on error (check lto_get_error_message() for details).
##
##  \since LTO_API_VERSION=11
##

proc ltoModuleCreateInCodegenContext*(mem: pointer; length: csize; path: cstring;cg: LtoCodeGenT): LtoModuleT {.cdecl, importc: "lto_module_create_in_codegen_context", dynlib: LLVMlib.}
## *
##  Loads an object file from disk. The seek point of fd is not preserved.
##  Returns NULL on error (check lto_get_error_message() for details).
##
##  \since LTO_API_VERSION=5
##

proc ltoModuleCreateFromFd*(fd: cint; path: cstring; fileSize: csize): LtoModuleT {. cdecl, importc: "lto_module_create_from_fd", dynlib: LLVMlib.}
## *
##  Loads an object file from disk. The seek point of fd is not preserved.
##  Returns NULL on error (check lto_get_error_message() for details).
##
##  \since LTO_API_VERSION=5
##

proc ltoModuleCreateFromFdAtOffset*(fd: cint; path: cstring; fileSize: csize;mapSize: csize; offset: OffT): LtoModuleT {.cdecl, importc: "lto_module_create_from_fd_at_offset", dynlib: LLVMlib.}
## *
##  Frees all memory internally allocated by the module.
##  Upon return the lto_module_t is no longer valid.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleDispose*(`mod`: LtoModuleT) {.cdecl, importc: "lto_module_dispose", dynlib: LLVMlib.}
## *
##  Returns triple string which the object module was compiled under.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleGetTargetTriple*(`mod`: LtoModuleT): cstring {.cdecl, importc: "lto_module_get_target_triple", dynlib: LLVMlib.}
## *
##  Sets triple string with which the object will be codegened.
##
##  \since LTO_API_VERSION=4
##

proc ltoModuleSetTargetTriple*(`mod`: LtoModuleT; triple: cstring) {.cdecl, importc: "lto_module_set_target_triple", dynlib: LLVMlib.}
## *
##  Returns the number of symbols in the object module.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleGetNumSymbols*(`mod`: LtoModuleT): cuint {.cdecl, importc: "lto_module_get_num_symbols", dynlib: LLVMlib.}
## *
##  Returns the name of the ith symbol in the object module.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleGetSymbolName*(`mod`: LtoModuleT; index: cuint): cstring {.cdecl, importc: "lto_module_get_symbol_name", dynlib: LLVMlib.}
## *
##  Returns the attributes of the ith symbol in the object module.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoModuleGetSymbolAttribute*(`mod`: LtoModuleT; index: cuint): LtoSymbolAttributes {. cdecl, importc: "lto_module_get_symbol_attribute", dynlib: LLVMlib.}
## *
##  Returns the module's linker options.
##
##  The linker options may consist of multiple flags. It is the linker's
##  responsibility to split the flags using a platform-specific mechanism.
##
##  \since LTO_API_VERSION=16
##

proc ltoModuleGetLinkeropts*(`mod`: LtoModuleT): cstring {.cdecl, importc: "lto_module_get_linkeropts", dynlib: LLVMlib.}
## *
##  Diagnostic severity.
##
##  \since LTO_API_VERSION=7
##

type
  LtoCodegenDiagnosticSeverityT* {.size: sizeof(cint).} = enum
    LTO_DS_ERROR = 0, LTO_DS_WARNING = 1, LTO_DS_NOTE = 2, LTO_DS_REMARK = 3 ##  Added in LTO_API_VERSION=10.


## *
##  Diagnostic handler type.
##  \p severity defines the severity.
##  \p diag is the actual diagnostic.
##  The diagnostic is not prefixed by any of severity keyword, e.g., 'error: '.
##  \p ctxt is used to pass the context set with the diagnostic handler.
##
##  \since LTO_API_VERSION=7
##

type
  LtoDiagnosticHandlerT* = proc (severity: LtoCodegenDiagnosticSeverityT;diag: cstring; ctxt: pointer) {.cdecl.}

## *
##  Set a diagnostic handler and the related context (void *).
##  This is more general than lto_get_error_message, as the diagnostic handler
##  can be called at anytime within lto.
##
##  \since LTO_API_VERSION=7
##

proc ltoCodegenSetDiagnosticHandler*(a1: LtoCodeGenT; a2: LtoDiagnosticHandlerT;a3: pointer) {.cdecl, importc: "lto_codegen_set_diagnostic_handler", dynlib: LLVMlib.}
## *
##  Instantiates a code generator.
##  Returns NULL on error (check lto_get_error_message() for details).
##
##  All modules added using \a lto_codegen_add_module() must have been created
##  in the same context as the codegen.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoCodegenCreate*(): LtoCodeGenT {.cdecl, importc: "lto_codegen_create", dynlib: LLVMlib.}
## *
##  Instantiate a code generator in its own context.
##
##  Instantiates a code generator in its own context.  Modules added via \a
##  lto_codegen_add_module() must have all been created in the same context,
##  using \a lto_module_create_in_codegen_context().
##
##  \since LTO_API_VERSION=11
##

proc ltoCodegenCreateInLocalContext*(): LtoCodeGenT {.cdecl, importc: "lto_codegen_create_in_local_context", dynlib: LLVMlib.}
## *
##  Frees all code generator and all memory it internally allocated.
##  Upon return the lto_code_gen_t is no longer valid.
##
##  \since prior to LTO_API_VERSION=3
##

proc ltoCodegenDispose*(a1: LtoCodeGenT) {.cdecl, importc: "lto_codegen_dispose", dynlib: LLVMlib.}
## *
##  Add an object module to the set of modules for which code will be generated.
##  Returns true on error (check lto_get_error_message() for details).
##
##  \c cg and \c mod must both be in the same context.  See \a
##  lto_codegen_create_in_local_context() and \a
##  lto_module_create_in_codegen_context().
##
##  \since prior to LTO_API_VERSION=3
##
